# ros2_ws

./: .gitignore  cyclonedds_local.xml  cyclonedds_wifi_config.xml  rviz_stereo_config.rviz  stereo_params.yaml
.qwen/: settings.json  settings.json.orig
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/camera_calibration/share/camera_calibration/: package.xml
install/examples_rclcpp_async_client/lib/examples_rclcpp_async_client/: client_main
install/examples_rclcpp_async_client/share/examples_rclcpp_async_client/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/examples_rclcpp_cbg_executor/include/examples_rclcpp_cbg_executor/: ping_node.hpp  pong_node.hpp
install/examples_rclcpp_cbg_executor/lib/examples_rclcpp_cbg_executor/: ping  ping_pong  pong
install/examples_rclcpp_cbg_executor/share/examples_rclcpp_cbg_executor/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/examples_rclcpp_minimal_action_client/lib/examples_rclcpp_minimal_action_client/: action_client_member_functions  (+3 more)
log/: latest_build  latest_test
metrics_data/: scenario_A.csv  scenario_B.csv  scenario_C.csv
src/MaixSense_ROS/: .gitignore
src/camera/: CMakeLists.txt  package.xml
src/camera/src/: camera.cpp
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/motor_driver/: package.xml  setup.py
src/motor_driver/motor_driver/: motor_driver_node.py
src/my_cam_driver/: package.xml  setup.cfg  setup.py
src/my_cam_driver/launch/: stereo_3d_mapping.launch.py  stereo_pointcloud_only.launch.py  stereo_rtabmap.launch.py  stereo_tf_only.launch.py  stereo_usb_driver.launch.py
src/my_cam_driver/my_cam_driver/: camera_node.py
src/my_robot_description/: package.xml  setup.py
src/my_robot_description/launch/: display.launch.py
src/my_robot_description/rviz/: config.rviz
src/my_robot_description/urdf/: robot.urdf  robot.urdf.xacro
src/my_webots_robot/: CMakeLists.txt  package.xml
src/my_webots_robot/include/my_webots_robot/: youbot_wrapper.hpp
src/my_webots_robot/include/my_webots_robot/libraries/youbot_control/include/: arm.h  gripper.h
src/my_webots_robot/launch/: my_robot_launch.py
src/my_webots_robot/src/: my_robot_node.cpp
src/my_webots_robot/worlds/: Lab1.wbt
src/talker/: CMakeLists.txt
src/talker/src/: talker_node.cpp
src/webots_lab2_pkg/: package.xml  setup.cfg  setup.py
src/webots_lab2_pkg/launch/: lab2.launch.py
src/webots_lab2_pkg/resource/: supervisor.urdf  telega.urdf  ur5e.urdf
src/webots_lab2_pkg/webots_lab2_pkg/: generate_mock_data.py  lab2_plugin.py  metrics_collector.py  plot_metrics.py
src/webots_lab2_pkg/worlds/: lab2.wbt
(+235 files in other folders)
