<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera</name>
  <version>0.0.0</version>
  <description>Examples of minimal camera</description>
  <maintainer email="iammasterspubg@gmail.com">ubuntu</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <build_depend>opencv</build_depend>
    <build_depend>cv_bridge</build_depend>
    <exec_depend>opencv</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
  </export>
</package>
