[develop]
script_dir=$base/lib/my_cam_driver
[install]
install_scripts=$base/lib/my_cam_driver
[metadata]
name = my_cam_driver
version = 0.1.0
description = Simple stereo USB camera driver (python)

[options]
packages = find:
install_requires =
    numpy
    opencv-python
    pyyaml

[options.entry_points]
console_scripts =
    stereo_usb_driver = my_cam_driver.my_cam_driver:main
